Move pages into control flow chapter - reading GPIO pin focus

--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-tour/04-01-binary-calculator.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-tour/04-01-binary-calculator.mdx
@@ -6,14 +6,13 @@ sidebar:
   label: " - Binary Calculator"
 ---
 
+TODO: Update this to use control flow - page will focus on reading Digital values.
 
 import { Accordion, AccordionItem, Steps } from 'accessible-astro-components'
 
 # Overview
 
 Welcome to the challenge! Your task is to create a simple 4-pin push button binary calculator using SplashKit on your Raspberry Pi. In this project, you will read the state (HIGH or LOW) of four push buttons and then use those values to form a binary number. Finally, you'll convert that binary number into its decimal equivalent and display the result.
-
-Remember: we are still learning about sequence and data—no loops or conditional logic yet! You'll record each reading by following a series of prompts.
 
 # Hardware Setup
 
