--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-tour/05-00-potentiometer.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-tour/05-00-potentiometer.mdx
@@ -5,6 +5,8 @@ sidebar:
     class: pi
 ---
 
+TODO: Update this to flow on from reading values - page will focus on reading Analog values.
+
 import { Accordion, AccordionItem, Steps } from "accessible-astro-components";
 
 # Overview
