Update 7-seg pages

--- a/src/content/docs/book/part-2-organised-code/2-organising-code/1-tour/05-00-gpio-7-segment-display.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/1-tour/05-00-gpio-7-segment-display.mdx
@@ -9,6 +9,8 @@ import { Accordion, AccordionItem } from 'accessible-astro-components';
 
 TODO: Update this to use C++ and functions.
 
+Combine with potentiometer to change value based on potentiometer reading.
+
 - Page with Gif showing 0-9 showing on the actual 7-segment display.
 - Page explaining the 7-segment numbers and going through wiring the circuit.
     With these images:
@@ -23,7 +25,7 @@ Potential Links that may be useful:
 - [Hex decoder tutorial - possible use some of this](https://electronics-fun.com/7-segment-hex-decoder/)
 - [SMA42056 Technical Data Sheet](https://cdn.velleman.eu/downloads/29/infosheets/vmp502_sma42056etc.pdf)
 
-Final code with all numbers displayed in sequence (needs to be updated to C++ and using functions):
+Final code with all numbers displayed in sequence (needs to be updated to C++ and using functions and potentiometer):
 
 <Accordion>
   <AccordionItem header="Final code">
