Fix broken links

--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-tour/4-00-potentiometer.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-tour/4-00-potentiometer.mdx
@@ -7,7 +7,7 @@ sidebar:
 
 TODO: Update this to flow on from reading values - page will focus on reading Analog values.
 
-import { Accordion, AccordionItem, Steps } from "accessible-astro-components";
+import { Accordion, AccordionItem } from "accessible-astro-components";
 
 # Overview
 
