--- a/src/content/docs/book/part-1-instructions/3-control-flow/3-explore/3-4-judgement-game.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/3-explore/3-4-judgement-game.mdx
@@ -7,7 +7,7 @@ sidebar:
 ---
 
 
-import { Accordion, AccordionItem, Steps } from 'accessible-astro-components'
+import { Accordion, AccordionItem } from 'accessible-astro-components'
 
 # Task Overview
 
