--- a/src/content/docs/book/part-2-organised-code/1-starting-cpp/0-pano/7-raspberry-pi.mdx
+++ b/src/content/docs/book/part-2-organised-code/1-starting-cpp/0-pano/7-raspberry-pi.mdx
@@ -59,7 +59,7 @@ int main()
   C++ uses `#include "splashkit.h"` instead of C#’s `using` statements. Also, note the use of the scope resolution operator (`::`) when referring to enums and constants.
 
 - **Compilation Process:**  
-  Unlike C#, where you use `dotnet run` to compile and execute your code in one step, with C++ you compile and then run your program separately. See our [Compiling C++ Programs](./images/compile-cpp.png) guide for more details.
+  Unlike C#, where you use `dotnet run` to compile and execute your code in one step, with C++ you compile and then run your program separately. See our [Compiling C++ Programs](/book/part-2-organised-code/1-starting-cpp/0-pano/1-compile) guide for more details.
 
 - **Project Structure:**  
   In C#, you have a project file that manages dependencies. With C++, you simply compile your `.cpp` file(s) directly using a compiler like **clang++** or **g++**.
@@ -67,7 +67,7 @@ int main()
 # What to Do Next
 
 1. **Review the Documentation:**  
-   Visit the [SplashKit Documentation](https://splashkit.io/guides) to see detailed information about the C++ API. You'll notice that the same functions you used in C# are available in C++ with very similar usage.
+   Visit the [SplashKit Raspberry Documentation](https://splashkit.io/api/raspberry) to see detailed information about the C++ API. You'll notice that the same functions you used in C# are available in C++ with very similar usage.
 
 2. **Try Converting a Simple Program:**  
    Take one of your simple C# projects and convert it to C++. Start by changing the syntax and compile it using:
