--- a/src/content/docs/book/part-0-getting-started/2-computer-use/2-trailside/04-files-shell.mdx
+++ b/src/content/docs/book/part-0-getting-started/2-computer-use/2-trailside/04-files-shell.mdx
@@ -59,7 +59,16 @@ cd /Users
 ```
 
 </TabItem>
-<TabItem label="Windows (WSL) & Linux">
+<TabItem label="Linux">
+
+Here is an example on how the change directory command is used. This will change the current working directory into the folder at the `/home` path.
+
+```shell
+cd /home
+```
+
+</TabItem>
+<TabItem label="Windows (WSL)">
 
 Here is an example on how the change directory command is used. This will change the current working directory into the folder at the `/home` path.
 
