--- a/src/content/docs/book/part-0-getting-started/2-computer-use/2-trailside/06-edit-code.mdx
+++ b/src/content/docs/book/part-0-getting-started/2-computer-use/2-trailside/06-edit-code.mdx
@@ -26,7 +26,16 @@ code .
 ```
 
 </TabItem>
-<TabItem label="Windows (WSL) & Linux">
+<TabItem label="Linux">
+
+```sh
+cd ~/Documents/Code/HelloWorld
+code .
+# launch VS Code with the HelloWorld folder open
+```
+
+</TabItem>
+<TabItem label="Windows (WSL)">
 
 ```sh
 cd ~/Documents/Code/HelloWorld
