--- a/src/content/docs/book/part-0-getting-started/3-building-programs/1-tour/1-hello-world-cli.mdx
+++ b/src/content/docs/book/part-0-getting-started/3-building-programs/1-tour/1-hello-world-cli.mdx
@@ -38,7 +38,20 @@ cd ~/Documents/Code
 ```
 
 </TabItem>
-<TabItem label="Windows (WSL) & Linux">
+<TabItem label="Linux">
+
+```zsh
+# Create a Documents/Code folder
+# WSL users might also need to create the Documents folder, using:
+#   mkdir ~/Documents
+mkdir ~/Documents/Code
+
+# Move to the Documents/Code folder
+cd ~/Documents/Code
+```
+
+</TabItem>
+<TabItem label="Windows (WSL)">
 
 ```zsh
 # Create a Documents/Code folder
