--- a/src/content/docs/book/part-0-getting-started/2-computer-use/0-panorama/03-files-and-folders.mdx
+++ b/src/content/docs/book/part-0-getting-started/2-computer-use/0-panorama/03-files-and-folders.mdx
@@ -50,7 +50,25 @@ cd ../..
 
 </TabItem>
 
-<TabItem label="Windows (WSL) & Linux">
+<TabItem label="Linux">
+
+```shell
+# move into the /home/andrew/Documents/ folder
+cd /home/andrew/Documents
+# or
+cd ~/Documents
+
+# Now we are in the Documents folder...
+# move into the /home/andrew/Documents/Code folder
+cd Code
+
+## Move back to /home/andrew - the parent of the parent folder
+cd ../..
+```
+
+</TabItem>
+
+<TabItem label="Windows (WSL)">
 
 ```shell
 # move into the /home/andrew/Documents/ folder
