Add image for showing how to open the mingw64 terminal

--- a/src/content/docs/book/appendix/0-installation/2-5-setup-win-msys.mdx
+++ b/src/content/docs/book/appendix/0-installation/2-5-setup-win-msys.mdx
@@ -39,12 +39,14 @@ To get SplashKit and other coding tools installed on Windows, using MSYS2, follo
 
     Make sure to use the default install path.
 
-
-3.  ### Use the "MINGW64" terminal
+3. ### Use the "MINGW64" terminal
 
     MSYS2 comes with a variety of terminal environments.
 
     You will need to use the **MINGW64** terminal environment (not MSYS or UCRT), which you can find by searching "mingw64" in the Windows Start menu and selecting the **MSYS2 MINGW64** App.
+
+    ![Image showing opening MSYS2 MINGW64 Terminal](./images/setup-windows/open-mingw64-terminal.png)
+    <div class="caption">Image not subject to The Programmer's Field Guide <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 License</a></div>
 
 4. Pin MINGW64 Terminal to the taskbar:
 
