--- a/src/content/docs/book/part-0-getting-started/2-computer-use/1-tour/3-1-terminal.mdx
+++ b/src/content/docs/book/part-0-getting-started/2-computer-use/1-tour/3-1-terminal.mdx
@@ -2,9 +2,63 @@
 title: Using the Terminal
 ---
 
+import { Tabs, TabItem } from '@astrojs/starlight/components';
+
 Now we need to get our hands dirty and start playing with the Terminal. This will be a very quick tour, but will help get you started. We will expand on this in the next chapter.
 
 Open the terminal on your computer.
+
+:::tip[How do I open the Terminal?]
+
+<Tabs syncKey="terminal-type">
+<TabItem label="macOS">
+  
+To open the Terminal on macOS, press ***Command*** (⌘) + ***Space bar*** to open the Spotlight Search, start typing "Terminal" and then click the **Terminal** app.
+
+![Gif showing Spotlight Search to open Terminal and pasting Xcode install command](/gifs/setup-macos/terminal-xcode-install.gif)
+<div class="caption">Image not subject to The Programmer's Field Guide <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 License</a></div>
+
+</TabItem>
+<TabItem label="Linux">
+
+- To open the Terminal on **Debian**:
+
+    Click "Activities" in the top left of the screen and type "Terminal" in the search bar, then click on the Terminal icon.
+
+    ![Gif showing how to open the Terminal](/gifs/setup-linux/OpenTerminal.gif)
+    <div class="caption">Image not subject to The Programmer's Field Guide <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 License</a></div>
+
+- To open the Terminal on **Raspberry Pi**:
+
+    Click the Terminal icon in the task bar or press `Ctrl + Alt + T`.
+
+    ![Image Showing the Terminal Icon](/src/content/docs/book/appendix/0-installation/images/setup-pi/1-2-setup-pi-Terminal_Icon.png)
+    <div class="caption">Image not subject to The Programmer's Field Guide <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 License</a></div>
+
+</TabItem>
+<TabItem label="Windows (WSL)">
+
+To open a WSL Terminal, search "Ubuntu" in the Windows Start menu, and then select the Ubuntu App (green box below):
+
+![Open Ubuntu Terminal](/src/content/docs/book/appendix/0-installation/images/setup-windows/ubuntu-terminal-open.png)
+<div class="caption">Image not subject to The Programmer's Field Guide <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 License</a></div>
+
+*You can also follow the steps in the [Configure 'Windows Terminal'](/book/appendix/0-installation/2-6-setup-win-wsl/#configure-windows-terminal) section of the WSL installation page to set up the Windows "Terminal" app to use the WSL terminal.*
+
+</TabItem>
+
+<TabItem label="Windows (MSYS2)">
+
+To open the **MINGW64** terminal (not MSYS2, UCRT64, etc), search "mingw64" in the Windows Start menu and then select the **MSYS2 MINGW64** App (green box below):
+
+![Image showing how to open MSYS2 MINGW64 Terminal](/src/content/docs/book/appendix/0-installation/images/setup-windows/open-mingw64-terminal.png)
+<div class="caption">Image not subject to The Programmer's Field Guide <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 License</a></div>
+
+</TabItem>
+
+</Tabs>
+
+:::
 
 At this point, you should see a “prompt” within the terminal. This is the **shell** asking you to give it an instruction. You type commands, and press the Enter or Return key on your keyboard to get the shell to do what you have asked.
 
