Update Raspberry Pi hardware page to fix gpio header link and add links for helpful products + graffle file updates

--- a/src/content/docs/book/appendix/0-installation/2-2-pi-computer.mdx
+++ b/src/content/docs/book/appendix/0-installation/2-2-pi-computer.mdx
@@ -211,7 +211,7 @@ Building programs really requires that you have access to a computer that you ca
 Using the _Raspberry Pi_ Multi-tool will give you several advantages:
 
 - You can play around with Unix without risking your day-to-day computer (which you can switch to Linux once you are more confident)
-- The Raspberry Pi include pins for **General Purpose Input / Output** (**GPIO**) though a [40-pin header](https://www.raspberrypi.com/documentation/computers/raspberry-pi.html#gpio-and-the-40-pin-header) on the board:
+- The Raspberry Pi include pins for **General Purpose Input / Output** (**GPIO**) though a [40-pin header](https://www.raspberrypi.com/documentation/computers/raspberry-pi.html#gpio) on the board:
 
 ![Raspberry Pi 40-pin header](https://www.raspberrypi.com/documentation/computers/images/GPIO-Pinout-Diagram-2.png)
 <div class="caption">Image © Raspberry Pi Ltd, licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International</a> (CC BY-SA)</div>
@@ -258,6 +258,24 @@ This is the list of components we used to build our multi-tool with links to Aus
 - 1 x [USB Type-C Short Sync & Charge Flat Cable 20cm](https://core-electronics.com.au/usb-type-c-short-sync-charge-flat-cable-20cm.html)
 - 1 x [ModMyPi Modular RPi 2 Case - VESA Splash (75/100mm)](https://core-electronics.com.au/modmypi-modular-rpi-2-case-vesa-splash-75-100mm.html)
 - 1 x [USB C Power Delivery Battery Bank 20000mAh](https://core-electronics.com.au/usb-c-pd-battery-bank-20000mah.html)
+
+:::note
+When working with the GPIO pins, it can be tricky to find the right pins when trying to connect your wires. You can use a GPIO Breakout board, or a case with this built in.
+
+Here are some options for GPIO Breakout boards:
+
+- [Raspberry Pi GPIO Breakout Lead and Header for breadboard](https://www.jaycar.com.au/raspberry-pi-gpio-breakout-lead-and-header-for-breadboard/p/XC9042)
+- [40-pin Raspberry Pi GPIO Breakout](https://core-electronics.com.au/40-pin-raspberry-pi-gpio-breakout.html)
+
+An alternative option (highly recommended):
+
+- [Argon ONE V2 Raspberry Pi 4 Case](https://core-electronics.com.au/argon-one-v2-raspberry-pi-4-case.html)
+
+    _This case for the Raspberry Pi 4 includes a built in colour-coded GPIO header with both pin numbers and pin descriptions, which is easy to access by removing a magnetic cover._
+
+    Also available at [Altronics](https://www.altronics.com.au/p/h8952a-argon-one-v2-case-to-suit-raspberry-pi-4/).
+
+:::
 
 ## 2. Building your multi-tool
 
